--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,7 +16,7 @@ steps:
         "--image",
         "gcr.io/$PROJECT_ID/snowflake-deploy",
         "--region",
-        "us-east4",
+        "us-central1",
         "--platform",
         "managed",
       ]
