Adding Dockerfile and cloudbuild.yaml for GCP

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,6 +8,6 @@ steps:
         "gcr.io/$PROJECT_ID/snowflake-deploy",
         ".",
         "--build-arg",
-        "USERNAME={_USERNAME}",
-        "PASSWORD={_PASSWORD}",
+        "'USERNAME={_USERNAME}'",
+        "'PASSWORD={_PASSWORD}'",
       ]
