--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,14 @@
 steps:
   # build the container image
-  - name: "gcr.io/cloud-builders/docker"
+  - name: 'gcr.io/cloud-builders/docker'
     args:
       [
-        "build",
-        "-t",
-        "gcr.io/$PROJECT_ID/snowflake-deploy",
-        "--build-arg",
-        "USERNAME={_USERNAME}",
-        "PASSWORD={_PASSWORD}",
-        ".",
+        'build',
+        '--build-arg',
+        'USERNAME={_USERNAME}',
+        'PASSWORD={_PASSWORD}',        
+        '-t',
+        'gcr.io/$PROJECT_ID/snowflake-deploy',
+        '.',
 
       ]
